[gd_scene load_steps=2 format=2]

[ext_resource path="res://scenes/etc/btnProfile.gd" type="Script" id=1]

[node name="btnProfile" type="Button"]
margin_right = 81.0
margin_bottom = 90.0
size_flags_horizontal = 3
script = ExtResource( 1 )

[node name="tween" type="Tween" parent="."]

[node name="marginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 4
custom_constants/margin_top = 4
custom_constants/margin_left = 4
custom_constants/margin_bottom = 4

[node name="vBoxContainer" type="VBoxContainer" parent="marginContainer"]
margin_left = 4.0
margin_top = 4.0
margin_right = 77.0
margin_bottom = 86.0

[node name="strProfileName" type="Label" parent="marginContainer/vBoxContainer"]
margin_right = 73.0
margin_bottom = 14.0
text = "Profile #1"
align = 1

[node name="strProfileCompletion" type="Label" parent="marginContainer/vBoxContainer"]
margin_top = 18.0
margin_right = 73.0
margin_bottom = 32.0
text = "50%"
align = 1

[connection signal="focus_entered" from="." to="." method="_on_btnProfile_focus_entered"]
[connection signal="focus_exited" from="." to="." method="_on_btnProfile_focus_exited"]
